crates/ui-macros/tests/compile-fail/ui_action_empty.rs
use poly_ui_macros::ui_action;

#[ui_action()]
fn SomeComponent() {}
